--- a/Predicting_Emotions_Using_EEG_Data.ipynb
+++ b/Predicting_Emotions_Using_EEG_Data.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "17erOR-wCTgl4v1vMhRiXqwTBhTWYhiBm",
-      "authorship_tag": "ABX9TyOvCR3J6Wxpw/blM+kgi9n4"
+      "authorship_tag": "ABX9TyOvCR3J6Wxpw/blM+kgi9n4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vidhijaju/Hii/blob/main/Predicting_Emotions_Using_EEG_Data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 15,
